# reservoir-bots

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
models/finetuned/yolo/: args.yaml  results.csv
models/gnn/: navigation_gnn.pt
outputs/: submission.json
outputs/21216/: prediction.json  scene_3d.json
scripts/: example_inference.py  run_pipeline.py
src/: config.py  depth_model.py  main.py  phase0_data.py  phase1_vision.py  phase2_depth.py  phase2_depth_perc.py  phase3_fusion.py  phase4_symbolic.py  phase5_gnn.py  utils.py
src/phases/: phase0_data.py  phase1_vision.py  phase2_depth.py  phase3_fusion.py  phase4_symbolic.py  phase5_gnn.py
starter_kit/: evaluate_local.py  predict.py  requirements.txt
tests/: test_p0.py  test_p1.py  test_p2.py  test_p3.py  test_p4.py  test_p5.py  test_p6.py
