[project]
name = "theker-robotics-hackathon"
version = "0.1.0"
description = "Neuro-symbolic autonomous navigation pipeline"
readme = {text = "", content-type = "text/plain"}
requires-python = "~=3.10.0"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torch-geometric>=2.5.0",
    "ultralytics>=8.1.0",
    "transformers>=4.38.0",
    "timm>=0.9.0",
    "anthropic>=0.20.0",
    "networkx>=3.2.1",
    "pycocotools>=2.0.7",
    "numpy<2.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "tqdm",
    "opencv-python-headless>=4.11.0.86",
    "dotenv>=0.9.9",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = ["venv", "\\.venv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
